# se-toolkit-lab-7

./: README.md  VM-SETUP-INSTRUCTIONS.md  vm-setup.sh
bot/: .env.bot.example  .gitignore  Dockerfile  PLAN.md  README.md  bot.py  config.py  pyproject.toml
bot/handlers/: __init__.py  default.py  health.py  help.py  labs.py  scores.py  start.py  submissions.py
bot/services/: __init__.py  intent_router.py  llm_client.py  lms_client.py  simple_router.py
